Dashboard/src/App.css
/* 
====================================
SCROLLBARS
==================================== 
*/

div::-webkit-scrollbar {
  width: 1em;
}

div::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 1px #95a5a6;
  box-shadow: inset 0 0 1px #95a5a6;
  background-color: #95a5a6;
}

div::-webkit-scrollbar-thumb {
  background-color: #7f8c8d;
}

/* 
====================================
MAIN
==================================== 
*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-size: 10px;
  line-height: 230%;
  background-color: #34495e;
  font-family: "Lato", sans-serif;
  text-rendering: optimizeLegibility;
}

.app-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.blank {
  height: 6em;
}

.u-margin-top-small {
  margin-top: 2rem;
}

/* 
====================================
HEADER
==================================== 
*/

.title {
  display: flex;
  align-items: center;
}

.title .logo {
  display: block;
  transform: translateY(2px);
}

.title-text {
  letter-spacing: 0.4rem;
  font-weight: 400;
  text-transform: uppercase;
}

header {
  background-color: #2c3e50;
  height: 5rem;
  font-size: 1.5rem;
  color: #ecf0f1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2.2em;
  width: 100%;
}

.logo {
  height: 4rem;
  margin-right: 1rem;
}

.lamp-content {
  font-size: 1.5em;
  display: flex;
  align-items: center;
}

.lamp-text {
  font-weight: 400;
  letter-spacing: 0.3rem;
}

.bulb {
  height: 1.3em;
  width: 1.3em;
  margin: 0 0.6em;
}

/* 
====================================
BODY
==================================== 
*/

.main-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1;
  padding-bottom: 4rem;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

h3 {
  font-weight: 600;
  letter-spacing: 0.2rem;
}

/* 
====================================
PANELS
==================================== 
*/

.row {
  display: flex;
  flex-wrap: wrap;
  align-content: space-around;
}

.panel-header {
  display: flex;
  justify-content: space-between;
  color: #ecf0f1;
  font-size: 1.6rem;
  background-color: #2c3e50;
  height: 8rem;
}

.panel-title {
  text-transform: uppercase;
  letter-spacing: 0.5rem;
  font-weight: 400;
}

.panel-header h3 {
  border-bottom: 0.01em solid #7f8c8d;
  padding: 2rem;
  width: 100%;
}

.panel-container {
  display: flex;
  flex-direction: column;
  background-color: #28394a;
  width: 85rem;
  height: 48rem;
  margin: 2rem 1rem 0rem 2rem;
}

.panel-container li {
  list-style-position: inside;
  word-break: break-word;
}

.panel-content {
  padding: 1.1em;
  flex: 1;
  font-size: 1.6em;
  color: #ecf0f1;
  overflow: auto;
}

.refresh-container {
  background-color: #c0392b;
  width: 6rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 0.01em solid #c0392b;
  transition: all 0.6s;
}

.refresh-container:hover {
  background-color: #c25246;
  border-bottom: 0.01em solid #c25246;
  cursor: pointer;
}

@keyframes rotate {
  to {
    transform: rotate(360deg);
  }
}

.refresh-container:hover .refresh {
  animation: rotate 1.5s linear infinite;
}

.refresh {
  width: 2.5rem;
}

/* 
====================================
GITHUB PANEL
==================================== 
*/

.github-entry {
  padding-bottom: 0.7em;
}

.github-name {
  margin-left: -0.4em;
  color: #e74c3c;
  font-weight: 700;
}

.github-repo {
  display: inline-block;
  color: #3498db;
  font-weight: 700;
}

.github-icon {
  height: 1.5em;
  width: 1.5em;
  margin-right: 1em;
  margin-bottom: -0.2em;
}

.github-link:hover {
  color: #2980b9;
}

.github-message {
  margin-left: 2em;
  text-overflow: ellipsis;
  overflow: hidden;
}

.github-time {
  color: #2ecc71;
  display: inline-block;
}

/* 
====================================
OSTEPPY PANEL
==================================== 
*/

.eod-list h3:not(:first-child) {
  margin-top: 2rem;
}

.slack-icon {
  height: 1.5em;
  width: 1.5em;
  margin-right: 1em;
}

.slack-title {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0.4em 0;
}

.slack-post {
  padding: 0 0.3em;
}

.slack-message {
  padding-bottom: 0.7em;
}

.slack-message a {
  text-decoration: none;
  color: #2ecc71;
  padding-bottom: 0.7em;
}

.slack-message a:hover {
  color: #27ae60;
}

/* 
====================================
INFRASTRUCTURE PANEL
==================================== 
*/

.ip-icon {
  height: 1.2em;
  width: 1.2em;
  margin-right: 0.5em;
  margin-bottom: -0.2em;
}

.infra-name {
  color: #3498db;
  font-weight: 700;
}

.ip-entry {
  padding-bottom: 0.2em;
}

.ip-up {
  color: #27ae60;
  font-weight: 700;
}

.ip-down {
  color: #e74c3c;
  font-weight: 700;
}

.infra-wrapper {
  display: grid;
}

.infra-column {
  grid-row: 1 / -1;
  padding-right: 0.5em;
  padding-left: 0.5em;
}

.infra-column:nth-child(2) {
  border-right: 1px solid #263544;
  border-left: 1px solid #263544;
}

.infra-box {
  padding: 0.2em;
}

/* 
====================================
LAMP PANEL
==================================== 
*/

.lamp-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.bulb-off {
  height: 10em;
  width: 10em;
}

.lamp-message {
  padding-top: 4rem;
  font-size: 2rem;
}

/* 
====================================
SCHEDULE PANEL
==================================== 
*/

.schedule-heading {
  padding: 0em 0 0.5em 0;
}

.schedule-content {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.schedule-topic {
  flex: 2;
}

.schedule-name {
  flex: 2;
}

.schedule-time {
  flex: 1;
}

/* 
====================================
PRESENTATIONS SECTION
==================================== 
*/

.presenter-section {
  width: 22em;
  font-size: 0.9em;
  display: flex;
}

.presenter-row {
  display: flex;
  justify-content: space-between;
}

.presenter-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.presenter-name {
  margin-left: -0.4em;
  color: #e74c3c;
  font-weight: 700;
}

.presenter-info {
  color: #3498db;
  font-weight: 700;
}

.presenter-entry {
  padding-bottom: 0.6em;
}

/* 
====================================
DB1042 SECTION
==================================== 
*/

.meeting-time {
  justify-content: flex-start;
  font-weight: 700;
  color: #1abc9c;
}

.meeting-topic {
  width: 33rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #f1c40f;
  margin-left: -0.4em;
}

.meeting-organizer {
  width: 20rem;
  justify-content: flex-end;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #e74c3c;
}

.meeting-icons {
  padding: 0 0.6em 0 0.4em;
  vertical-align: middle;
}

/* 
====================================
SPINNER
==================================== 
*/

.spinner-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.lds-spinner {
  color: official;
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}

.lds-spinner div {
  transform-origin: 32px 32px;
  animation: lds-spinner 1.2s linear infinite;
}

.lds-spinner div:after {
  content: " ";
  display: block;
  position: absolute;
  top: 3px;
  left: 29px;
  width: 5px;
  height: 14px;
  border-radius: 20%;
  background: #fff;
}

.lds-spinner div:nth-child(1) {
  transform: rotate(0deg);
  animation-delay: -1.1s;
}

.lds-spinner div:nth-child(2) {
  transform: rotate(30deg);
  animation-delay: -1s;
}

.lds-spinner div:nth-child(3) {
  transform: rotate(60deg);
  animation-delay: -0.9s;
}

.lds-spinner div:nth-child(4) {
  transform: rotate(90deg);
  animation-delay: -0.8s;
}

.lds-spinner div:nth-child(5) {
  transform: rotate(120deg);
  animation-delay: -0.7s;
}

.lds-spinner div:nth-child(6) {
  transform: rotate(150deg);
  animation-delay: -0.6s;
}

.lds-spinner div:nth-child(7) {
  transform: rotate(180deg);
  animation-delay: -0.5s;
}

.lds-spinner div:nth-child(8) {
  transform: rotate(210deg);
  animation-delay: -0.4s;
}

.lds-spinner div:nth-child(9) {
  transform: rotate(240deg);
  animation-delay: -0.3s;
}

.lds-spinner div:nth-child(10) {
  transform: rotate(270deg);
  animation-delay: -0.2s;
}

.lds-spinner div:nth-child(11) {
  transform: rotate(300deg);
  animation-delay: -0.1s;
}

.lds-spinner div:nth-child(12) {
  transform: rotate(330deg);
  animation-delay: 0s;
}

@keyframes lds-spinner {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

/*
======================================
RESPONSIVE DESIGN
======================================
*/
@media only screen and (min-width: 2400px) {
  .panel-container {
    font-size: 1.2rem;
    width: 35vw;
    margin: 3rem;
  }
}

/* IPAD PRO*/
@media only screen and (max-width: 1780px) {
  .panel-container {
    font-size: 1.2rem;
    width: 45vw;
  }
}

@media only screen and (max-width: 1270px) {
  .panel-container {
    font-size: 1.2rem;
    width: 80vw;
  }

  .row {
    flex-direction: column;
  }
}

@media only screen and (min-width: 950px) {
  .panel-content {
    display: block;
  }
}

/* IPAD*/
@media only screen and (max-width: 950px) {
  .panel-container {
    height: auto;
    max-height: 48rem;
    font-size: 1.2rem;
    width: 85vw;
  }

  .schedule-topic,
  .schedule-name,
  .schedule-time {
    flex: auto;
  }
}

@media only screen and (max-width: 770px) {
  html {
    font-size: 8px;
  }

  header {
    padding: 2em;
  }

  .panel-container {
    width: 90vw;
  }

  .panel-header h3 {
    font-size: 1.5em;
  }

  .panel-content {
    font-size: 1.8rem;
  }

  .refresh-container {
    width: 5em;
  }

  .refresh {
    width: 2.3em;
  }

  .github-repo {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    max-width: 16rem;
    vertical-align: bottom;
  }

  .presenter-row {
    display: flex;
    justify-content: space-between;
  }

  .presenter-section {
    width: 8em;
    font-size: 1em;
    overflow: hidden;
    text-overflow: ellipsis;
    display: flex;
  }

  .meeting-time {
    min-width: 16rem;
  }

  .blank {
    height: 0em;
  }

  .bulb {
    height: 1.5em;
    width: 1.5em;
    margin: 0 0.2em;
  }
}

@media only screen and (max-width: 700px) {
  .row {
    flex-direction: column;
  }
}

@media only screen and (max-width: 500px) {
  .lamp-text {
    display: none;
  }

  .panel-header {
    font-size: 1.2rem;
    height: 6rem;
  }
}

/* IPHONE 5/SE */
@media only screen and (max-width: 365px) {
  header {
    font-size: 1.25rem;
  }

  .panel-container {
    width: 90vw;
  }
}

